<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nest Climate Monitor</string>
    <string name="app_version">Version %1$s</string>
    <string name="app_version_development">Version %1$s · Development build</string>
    <string name="widget_name">Nest Climate</string>
    <string name="widget_description">Indoor and outdoor temperature and humidity</string>
    <string name="graph_widget_name">Climate History Graph</string>
    <string name="graph_widget_description">Resizable 6-hour indoor and outdoor climate graph</string>
    <string name="inside_temperature_short">IN TEMP</string>
    <string name="inside_humidity_short">IN HUMID</string>
    <string name="outside_temperature_short">OUT TEMP</string>
    <string name="outside_humidity_short">OUT HUMID</string>
    <string name="no_value">--</string>
    <string name="waiting_first_reading">Waiting for first reading</string>
    <string name="climate_graph_description">Recent indoor and outdoor climate graph</string>
    <string name="climate_history_description">Indoor and outdoor climate history</string>
    <string name="widget_preview_description">Example indoor and outdoor temperature and humidity graph</string>
    <string name="widget_preview_example">Example · 6 hours</string>
    <string name="widget_preview_start">6h ago</string>
    <string name="widget_preview_end">Now</string>
    <string name="widget_preview_temp_high">80°</string>
    <string name="widget_preview_temp_mid">70°</string>
    <string name="widget_preview_temp_low">60°</string>
    <string name="widget_preview_humidity_high">70%</string>
    <string name="widget_preview_humidity_mid">50%</string>
    <string name="widget_preview_humidity_low">30%</string>
    <string name="widget_preview_inside_temp">71°</string>
    <string name="widget_preview_inside_humidity">45%</string>
    <string name="widget_preview_values_example">Example readings</string>
</resources>
